--- a/src/app/modulos/principal/componentes/escritorio/escritorio.component.html
+++ b/src/app/modulos/principal/componentes/escritorio/escritorio.component.html
@@ -40,25 +40,25 @@
         </li>
         <li>
           <a href="#">
-            <i class="fa fa-bar-chart-o"></i>
-            <span class="nav-label">Graphs</span>
+            <i class="fa fa-laptop"></i>
+            <span class="nav-label">Sistema</span>
             <span class="fa arrow"></span>
           </a>
           <ul class="nav nav-second-level collapse">
             <li>
-              <a href="graph_flot.html">Flot Charts</a>
+              <a routerLink="terceros" >Terceros</a>
             </li>
             <li>
-              <a href="graph_morris.html">Morris.js Charts</a>
+              <a href="graph_morris.html">Sedes</a>
             </li>
             <li>
-              <a href="graph_rickshaw.html">Rickshaw Charts</a>
+              <a href="graph_rickshaw.html">Usuarios</a>
             </li>
             <li>
-              <a href="graph_chartjs.html">Chart.js</a>
+              <a href="graph_chartjs.html">Tablas Genéricas</a>
             </li>
             <li>
-              <a href="graph_chartist.html">Chartist</a>
+              <a href="graph_chartist.html"></a>
             </li>
             <li>
               <a href="c3.html">c3 charts</a>
@@ -679,9 +679,6 @@
 
         </div>
       </div>
-
-
-
     </div>
 
     <div class="footer">
