--- a/src/app/modulos/archivo/componentes/archivo-cargar/archivo-cargar.component.html
+++ b/src/app/modulos/archivo/componentes/archivo-cargar/archivo-cargar.component.html
@@ -1,59 +1,61 @@
-<div class="row">
-  <div class="col-lg-12">
-    <div class="wrapper wrapper-content">
-      <div class="ibox">
-        <div class="ibox-title">
-          <input type="file" id="directorio" webkitdirectory directory multiple (change)="updateList()" />
+<div class="wrapper wrapper-content animated fadeInRightBig">
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="wrapper wrapper-content">
+        <div class="ibox">
+          <div class="ibox-title">
+            <input type="file" id="directorio" webkitdirectory directory multiple (change)="updateList()" [ngClass]="{'hide': cargando}"
+            />
 
-        </div>
-        <div class="ibox-content">
-          <div class="row m-b-sm m-t-sm hide">
-            <div class="col-md-1">
-              <button type="button" id="loading-example-btn" class="btn btn-white btn-sm">
-                <i class="fa fa-refresh"></i> Refresh</button>
-            </div>
-            <div class="col-md-11 hide">
-              <div class="input-group">
-                <input type="text" placeholder="Search" class="input-sm form-control">
-                <span class="input-group-btn">
-                  <button type="button" class="btn btn-sm btn-primary"> Go!</button>
-                </span>
+          </div>
+          <div class="ibox-content">
+            <div class="row m-b-sm m-t-sm hide">
+              <div class="col-md-1">
+                <button type="button" id="loading-example-btn" class="btn btn-white btn-sm">
+                  <i class="fa fa-refresh"></i> Refresh</button>
+              </div>
+              <div class="col-md-11 hide">
+                <div class="input-group">
+                  <input type="text" placeholder="Search" class="input-sm form-control">
+                  <span class="input-group-btn">
+                    <button type="button" class="btn btn-sm btn-primary"> Go!</button>
+                  </span>
+                </div>
               </div>
             </div>
-          </div>
 
-          <div class="project-list">
-            <table class="table table-hover">
-              <tbody>
-                <tr *ngFor="let archivo of archivos; let i = index">
-                  <td class="project-status">
-                    <span class="label label-primary">{{i+1}}</span>
-                  </td>
-                  <td class="project-title">
-                    {{archivo.name}}
-                    <br>
-                    <small>Última Modificación: {{archivo.lastModifiedDate|date:'shortDate'}} {{archivo.lastModifiedDate|date:'mediumTime'}}</small>
-                  </td>
-                  <td class="project-completion">
-                    <small>Tamaño: {{_helper.BytesToSize(archivo.size)}}</small>
-                  </td>
-                  <td class="project-actions">
-                    <a href="#" class="btn btn-white btn-sm">
-                      <i class="fa fa-trash"></i> Descartar </a>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
+            <div class="project-list">
+              <table class="table table-hover">
+                <tbody>
+                  <tr *ngFor="let archivo of archivos; let i = index">
+                    <td class="project-status">
+                      <span class="label label-primary">{{i+1}}</span>
+                    </td>
+                    <td class="project-title">
+                      {{archivo.name}}
+                      <br>
+                      <small>Última Modificación: {{archivo.lastModifiedDate|date:'shortDate'}} {{archivo.lastModifiedDate|date:'mediumTime'}}</small>
+                    </td>
+                    <td class="project-completion">
+                      <small>Tamaño: {{_helper.BytesToSize(archivo.size)}}</small>
+                    </td>
+                    <td class="project-actions">
+                      <a href="#" class="btn btn-white btn-sm" [ngClass]="{'hide': cargando}">
+                        <i class="fa fa-trash"></i> Descartar </a>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
-<div class="ibox-tools" [ngClass]="{'hide':archivos.length<=0}">
-  <!-- <button (click)="cargarArchivos()" class="btn btn-primary btn-xs">Cargar archivos</button> -->
-  <button type="button" class="btn btn-primary btn-lg" (click)="cargarArchivos()" [ngClass]="{'hide': cargando}">Cargar {{archivos.length}} archivos</button>
-  <div class="sk-spinner sk-spinner-cube-grid" [ngClass]="{'hide': !cargando}">
+  <div class="ibox-tools" [ngClass]="{'hide':archivos.length<=0}">
+    <!-- <button (click)="cargarArchivos()" class="btn btn-primary btn-xs">Cargar archivos</button> -->
+    <button type="button" class="btn btn-primary btn-lg" (click)="cargarArchivos()" [ngClass]="{'hide': cargando}">Cargar {{archivos.length}} archivos</button>
+    <div class="sk-spinner sk-spinner-cube-grid" [ngClass]="{'hide': !cargando}">
       <div class="sk-cube"></div>
       <div class="sk-cube"></div>
       <div class="sk-cube"></div>
@@ -64,4 +66,5 @@
       <div class="sk-cube"></div>
       <div class="sk-cube"></div>
     </div>
+  </div>
 </div>
