--- a/src/app/modulos/archivo/componentes/archivo/archivo.component.html
+++ b/src/app/modulos/archivo/componentes/archivo/archivo.component.html
@@ -4,92 +4,124 @@
 <div class="row">
   <div class="col-lg-12">
     <div class="ibox float-e-margins">
+      <div class="">
+        <div class="col-md-6">
+
+          <div class="file-box">
+            <div class="file">
+              <a href="#" (click)="abrirArchivo(archivo.directorio+'/'+archivo.nombre)">
+                <span class="corner"></span>
+
+                <div class="icon">
+                  <i class="fa fa-file-pdf-o"></i>
+                </div>
+                <div class="file-name">
+                  {{archivo.nombre}}
+                  <br>
+                  <small>Subido: {{archivo.fecha_registro | fecha}}</small>
+                </div>
+              </a>
+            </div>
+
+          </div>
+          <div class="profile-info">
+            <div class="">
+              <div>
+                <h2 class="no-margins">
+                  Alex Smith
+                </h2>
+                <h4>Founder of Groupeq</h4>
+                <small>
+                  There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form Ipsum
+                  available.
+                </small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <table class="table small m-b-xs">
+            <tbody>
+              <tr>
+                <td>
+                  <strong>142</strong> Projects
+                </td>
+                <td>
+                  <strong>22</strong> Followers
+                </td>
+
+              </tr>
+              <tr>
+                <td>
+                  <strong>61</strong> Comments
+                </td>
+                <td>
+                  <strong>54</strong> Articles
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <strong>154</strong> Tags
+                </td>
+                <td>
+                  <strong>32</strong> Friends
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="col-md-3">
+          <small>Sales in last 24h</small>
+          <h2 class="no-margins">206 480</h2>
+          <div id="sparkline1">
+            <canvas style="display: inline-block; width: 289.6px; height: 50px; vertical-align: top;" width="289" height="50"></canvas>
+          </div>
+        </div>
+
+
+      </div>
 
       <div class="ibox-content">
 
-        <h2>Lightbox image gallery</h2>
+        <h2>Página {{pager.currentPage}} de {{pager.totalPages}}</h2>
         <p>
-          <strong>blueimp Gallery</strong> is a touch-enabled, responsive and customizable image &amp; video gallery, carousel and
-          lightbox, optimized for both mobile and desktop web browsers. It features swipe, mouse and keyboard navigation,
-          transition effects, slideshow functionality, fullscreen support and on-demand content loading and can be extended
-          to display additional content types. Full documentation you can find at:
-          <a (click)="abrirArchivo(archivo.directorio+'/'+archivo.nombre)" target="_blank">{{archivo.directorio+'/'+archivo.nombre}}</a>
-        </p>
-
-        <div class="lightBoxGallery">
-          <a href="{{imagen}}" title="Página #{{i+1}}/{{archivo.paginas}}" data-gallery="" *ngFor="let imagen of imagenes; let i = index">
-            <img src="{{imagen}}" class="img-lg">
-          </a>
-
-          <!-- The Gallery as lightbox dialog, should be a child element of the document body -->
-          <div id="blueimp-gallery" class="blueimp-gallery">
-            <div class="slides"></div>
-            <h3 class="title"></h3>
-            <a class="prev">‹</a>
-            <a class="next">›</a>
-            <a class="close">×</a>
-            <a class="play-pause"></a>
-            <ol class="indicator"></ol>
-          </div>
-
-        </div>
-
-      </div>
-    </div>
-  </div>
-
-</div>
-
-
-<div class="row hide">
-  <div class="col-lg-12">
-    <div class="ibox">
-      <div class="ibox-content border-sbottom">
-        <h4>PDF.js</h4>
-        <p>
-          PDF.js is a Portable Document Format (PDF) viewer that is built with HTML5. PDF.js is community-driven and supported by Mozilla
-          Labs. The goal is to create a general-purpose, web standards-based platform for parsing and rendering PDFs. Full
-          documentation:
-          <a href="https://github.com/mozilla/pdf.js" target="_blank">https://github.com/mozilla/pdf.js</a>
+          <strong>{{allItems.length}}</strong> hojas en total
         </p>
 
       </div>
     </div>
-  </div>
-</div>
-<div class="text-center pdf-toolbar">
 
-  <div class="btn-group">
-    <button id="prev" class="btn btn-white">
-      <i class="fa fa-long-arrow-left"></i>
-      <span class="hidden-xs">Anterior</span>
-    </button>
-    <button id="next" class="btn btn-white">
-      <i class="fa fa-long-arrow-right"></i>
-      <span class="hidden-xs">Siguiente</span>
-    </button>
-    <button id="zoomin" class="btn btn-white">
-      <i class="fa fa-search-minus"></i>
-      <span class="hidden-xs">Acercar</span>
-    </button>
-    <button id="zoomout" class="btn btn-white">
-      <i class="fa fa-search-plus"></i>
-      <span class="hidden-xs">Alejar</span>
-    </button>
-    <button id="zoomfit" class="btn btn-white"> 100%</button>
-    <span class="btn btn-white hidden-xs">Página: </span>
-
-    <div class="input-group">
-      <input type="text" class="form-control" id="page_num">
-
-      <div class="input-group-btn">
-        <button type="button" class="btn btn-white" id="page_count">/ {{archivo.paginas}}</button>
+    <!-- pager -->
+    <div class="text-center">
+      <div *ngIf="pager.pages && pager.pages.length>0" class="btn-group">
+        <button class="btn btn-white" type="button" (click)="set_page(1)" [ngClass]="{disabled:pager.currentPage === 1}" [ngClass]="{disabled:pager.currentPage === pager.totalPages}">
+          <i class="fa fa-angle-double-left"></i>
+        </button>
+        <button class="btn btn-white" type="button" (click)="set_page(pager.currentPage - 1)" [ngClass]="{disabled:pager.currentPage === 1}"
+          [ngClass]="{disabled:pager.currentPage === pager.totalPages}">
+          <i class="fa fa-chevron-left"></i>
+        </button>
+        <button class="btn btn-white" [ngClass]="{active:pager.currentPage === page}" *ngFor="let page of pager.pages" (click)="set_page(page)">{{page}}</button>
+        <button class="btn btn-white" type="button" [ngClass]="{disabled:pager.currentPage === pager.totalPages}" (click)="set_page(pager.currentPage + 1)">
+          <i class="fa fa-chevron-right"></i>
+        </button>
+        <button class="btn btn-white" type="button" (click)="set_page(pager.totalPages)" [ngClass]="{disabled:pager.currentPage === pager.totalPages}"
+          [ngClass]="{disabled:pager.currentPage === pager.totalPages}">
+          <i class="fa fa-angle-double-right"></i>
+        </button>
       </div>
     </div>
-
   </div>
 </div>
-
-<div class="text-center m-t-md">
-  <canvas id="the-canvas" class="pdfcanvas border-left-right border-top-bottom b-r-md"></canvas>
+<div class="row">
+  <div class="col-lg-4">
+    <div class="ibox ">
+      <div class="ibox-title">
+        <h5>Rotating plane</h5>
+      </div>
+      <div class="ibox-content">
+        <img src="{{getImagen(0)}}"  height="500" alt="">
+      </div>
+    </div>
+  </div>
 </div>
