--- a/src/app/modulos/principal/componentes/escritorio/escritorio.component.html
+++ b/src/app/modulos/principal/componentes/escritorio/escritorio.component.html
@@ -489,7 +489,7 @@
           <a class="navbar-minimalize minimalize-styl-2 btn btn-primary ">
             <i class="fa fa-bars"></i>
           </a>
-          <form role="search" class="navbar-form-custom" action="search_results.html">
+          <form role="search" class="navbar-form-custom hide" action="search_results.html">
             <div class="form-group">
               <input type="text" placeholder="Search for something..." class="form-control" name="top-search" id="top-search">
             </div>
@@ -497,9 +497,9 @@
         </div>
         <ul class="nav navbar-top-links navbar-right">
           <li>
-            <span class="m-r-sm text-muted welcome-message">Welcome to INSPINIA+ Admin Theme.</span>
+            <span class="m-r-sm text-muted welcome-message">Bienvenido a {{usuario.tercero}}</span>
           </li>
-          <li class="dropdown">
+          <li class="dropdown hide">
             <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
               <i class="fa fa-envelope"></i>
               <span class="label label-warning">16</span>
@@ -560,7 +560,7 @@
               </li>
             </ul>
           </li>
-          <li class="dropdown">
+          <li class="dropdown hide">
             <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
               <i class="fa fa-bell"></i>
               <span class="label label-primary">8</span>
@@ -615,7 +615,7 @@
       </nav>
 
     </div>
-    <div class="row wrapper border-bottom white-bg page-heading">
+    <div class="row wrapper border-bottom white-bg page-heading hide">
       <div class="col-lg-10">
         <h2>Outlook view</h2>
         <ol class="breadcrumb">
@@ -639,9 +639,9 @@
         <div class="full-height-scroll white-bg border-left">
 
           <!-- <div class="wrapper wrapper-content animated fadeInRightBig"> -->
-            <!-- <div class="middle-box text-center animated fadeInRightBig"> -->
-            <router-outlet></router-outlet>
-            <!-- </div> -->
+          <!-- <div class="middle-box text-center animated fadeInRightBig"> -->
+          <router-outlet></router-outlet>
+          <!-- </div> -->
           <!-- </div> -->
 
 
