--- a/src/app/modulos/archivo/componentes/archivo/archivo.component.html
+++ b/src/app/modulos/archivo/componentes/archivo/archivo.component.html
@@ -96,7 +96,7 @@
   <div class="col-lg-12">
     <div class="ibox float-e-margins">
       <div class="ibox-title">
-        <h5>Mostrando {{itemsPorPagina}} páginas de {{pager.totalItems}}</h5>
+        <h5>Mostrando {{(itemsPorPagina<pager.totalItems)?itemsPorPagina:pager.totalItems}} de {{pager.totalItems}} páginas</h5>
         <div class="ibox-tools">
           <a class="collapse-link">
             <i class="fa fa-chevron-up"></i>
