--- a/src/app/modulos/archivo/componentes/lotes/lotes.component.html
+++ b/src/app/modulos/archivo/componentes/lotes/lotes.component.html
@@ -1,3 +1,107 @@
-<p>
-  lotes works!
-</p>
+<div class="row">
+  <div class="col-lg-12">
+    <div class="ibox float-e-margins">
+      <div class="ibox-title">
+        <h5>Lotes por clasificar y etiquetar </h5>
+        <div class="ibox-tools hide">
+          <a class="collapse-link">
+            <i class="fa fa-chevron-up"></i>
+          </a>
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+            <i class="fa fa-wrench"></i>
+          </a>
+          <ul class="dropdown-menu dropdown-user">
+            <li>
+              <a href="#">Config option 1</a>
+            </li>
+            <li>
+              <a href="#">Config option 2</a>
+            </li>
+          </ul>
+          <a class="close-link">
+            <i class="fa fa-times"></i>
+          </a>
+        </div>
+      </div>
+      <div class="ibox-content">
+        <div class="row">
+          <div class="col-sm-5 m-b-xs">
+            <select class="input-sm form-control input-s-sm inline" [(ngModel)]="lote" name="lote" id="lote" (change)="refrescar_archivos()">
+              <option value="{{lote}}" *ngFor="let lote of lotesUnicos">{{lote}}</option>
+            </select>
+          </div>
+          <div class="col-sm-4 m-b-xs hide">
+            <div data-toggle="buttons" class="btn-group">
+              <label class="btn btn-sm btn-white">
+                <input type="radio" id="option1" name="options"> Day </label>
+              <label class="btn btn-sm btn-white">
+                <input type="radio" id="option2" name="options"> Week </label>
+              <label class="btn btn-sm btn-white active">
+                <input type="radio" id="option3" name="options"> Month </label>
+            </div>
+          </div>
+          <div class="col-sm-3 hide">
+            <div class="input-group">
+              <input type="text" placeholder="Search" class="input-sm form-control">
+              <span class="input-group-btn">
+                <button type="button" class="btn btn-sm btn-primary"> Go!</button>
+              </span>
+            </div>
+          </div>
+        </div>
+        <div class="table-responsive">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>Nombre </th>
+                <th>Páginas </th>
+                <th>Clasificación</th>
+                <th>Etiqueta</th>
+                <th class="hide"></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let archivo of archivos">
+                <td>
+                  <a href="#" (click)="abrirArchivo(archivo.directorio+'/'+archivo.nombre)" tabindex="-1">
+                    <small>{{archivo.nombre}}</small>
+                  </a>
+                </td>
+                <td>{{archivo.paginas}}</td>
+                <td>
+                  <select name="clasificacion" id="clasificacion{{archivo.archivo_id}}" (change)="clasificar(archivo.archivo_id)">
+                    <option value=""></option>
+                    <option value="{{cla.codigo}}" *ngFor="let cla of clasificaciones">{{cla.observacion}}</option>
+                  </select>
+                </td>
+                <td>
+                  <input type="text" id="etiqueta{{archivo.archivo_id}}" (change)="etiquetar(archivo.archivo_id)">
+                </td>
+                <td class="hide">
+                  <i class="fa fa-check text-navy"></i>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <button class="btn btn-primary btn-rounded btn-block" (click)="guardar_cambios()" [ngClass]="{'hide': !guardar}">
+          <i class="fa fa-check"></i> Clasificar y Etiquetar Archivos
+        </button>
+
+
+      </div>
+      <div class="sk-spinner sk-spinner-cube-grid hide">
+        <div class="sk-cube"></div>
+        <div class="sk-cube"></div>
+        <div class="sk-cube"></div>
+        <div class="sk-cube"></div>
+        <div class="sk-cube"></div>
+        <div class="sk-cube"></div>
+        <div class="sk-cube"></div>
+        <div class="sk-cube"></div>
+        <div class="sk-cube"></div>
+      </div>
+    </div>
+  </div>
+
+</div>
