--- a/src/app/modulos/principal/componentes/escritorio/escritorio.component.html
+++ b/src/app/modulos/principal/componentes/escritorio/escritorio.component.html
@@ -215,10 +215,10 @@
       </nav>
 
     </div>
-    <div class="row wrapper border-bottom white-bg page-heading hide">
+    <div class="row wrapper border-bottom white-bg page-heading">
       <div class="col-lg-10">
-        <h2>Outlook view</h2>
-        <ol class="breadcrumb">
+        <h2>{{title}}</h2>
+        <ol class="breadcrumb hide">
           <li>
             <a href="index.html">Home</a>
           </li>
@@ -229,24 +229,32 @@
             <strong>Outlook view</strong>
           </li>
         </ol>
+        <ol class="breadcrumb">
+          <li *ngFor="let link of navlinks" [ngClass]="{'active': link.active}">
+            <a *ngIf="!link.active" [routerLink]="[link.url]">
+              {{link.title}}
+            </a>
+            <strong *ngIf="link.active">{{link.title}}</strong>
+          </li>
+        </ol>
       </div>
       <div class="col-lg-2">
 
       </div>
     </div>
     <div class="fh-breadcrumb">
-      <div class="full-height">
-        <div class="full-height-scroll white-bg border-left">
+      <!-- <div class="full-height"> -->
+      <div class="full-height-scroll white-bg">
 
-          <!-- <div class="wrapper wrapper-content animated fadeInRightBig"> -->
-          <!-- <div class="middle-box text-center animated fadeInRightBig"> -->
-          <router-outlet></router-outlet>
-          <!-- </div> -->
-          <!-- </div> -->
+        <!-- <div class="wrapper wrapper-content animated fadeInRightBig"> -->
+        <!-- <div class="middle-box text-center animated fadeInRightBig"> -->
+        <router-outlet (activate)="component_added($event)" (deactivate)="component_removed($event)"></router-outlet>
+        <!-- </div> -->
+        <!-- </div> -->
 
 
-        </div>
       </div>
+      <!-- </div> -->
     </div>
 
     <div class="footer">
