--- a/src/app/modulos/principal/componentes/escritorio/escritorio.component.html
+++ b/src/app/modulos/principal/componentes/escritorio/escritorio.component.html
@@ -38,15 +38,15 @@
             <span class="nav-label">Inicio</span>
           </a>
         </li>
-        <li>
+        <li routerLinkActive="active">
           <a href="#">
             <i class="fa fa-edit"></i>
             <span class="nav-label">Archivos</span>
             <span class="fa arrow"></span>
           </a>
-          <ul class="nav nav-second-level collapse">
+          <ul class="nav nav-second-level collapse" routerLinkActive="in">
             <li routerLinkActive="active">
-              <a routerLink="archivos/listado">Listado</a>
+              <a routerLink="archivos/listado">Consultas</a>
             </li>
             <li>
               <a routerLink="archivos/cargar">Subir archivos</a>
@@ -56,14 +56,14 @@
             </li>
           </ul>
         </li>
-        <li>
+        <li routerLinkActive="active">
           <a href="#">
             <i class="fa fa-laptop"></i>
             <span class="nav-label">Sistema</span>
             <span class="fa arrow"></span>
           </a>
-          <ul class="nav nav-second-level collapse">
-            <li>
+          <ul class="nav nav-second-level collapse" routerLinkActive="in">
+            <li routerLinkActive="active">
               <a routerLink="terceros">Terceros</a>
             </li>
             <li>
@@ -72,8 +72,8 @@
             <li>
               <a href="graph_rickshaw.html">Usuarios</a>
             </li>
-            <li>
-              <a href="graph_chartjs.html">Tablas Genéricas</a>
+            <li routerLinkActive="active">
+              <a routerLink="tablas">Tablas Genéricas</a>
             </li>
           </ul>
         </li>
