Por empezar a desarrollar etiquetas

--- a/src/app/modulos/principal/componentes/escritorio/escritorio.component.html
+++ b/src/app/modulos/principal/componentes/escritorio/escritorio.component.html
@@ -48,12 +48,15 @@
             <li routerLinkActive="active">
               <a routerLink="archivos/listado">Consultas</a>
             </li>
-            <li>
+            <li routerLinkActive="active">
               <a routerLink="archivos/cargar">Subir archivos</a>
             </li>
-            <li>
+            <li routerLinkActive="active">
               <a routerLink="archivos/lotes">Lotes de archivos</a>
             </li>
+            <li routerLinkActive="active">
+                <a routerLink="archivos/etiquetas">Etiquetas</a>
+              </li>
           </ul>
         </li>
         <li routerLinkActive="active">
@@ -66,8 +69,8 @@
             <li routerLinkActive="active">
               <a routerLink="terceros">Terceros</a>
             </li>
-            <li>
-              <a href="graph_morris.html">Sedes</a>
+            <li routerLinkActive="active">
+              <a routerLink="sedes">Sedes</a>
             </li>
             <li>
               <a href="graph_rickshaw.html">Usuarios</a>
