--- a/src/app/modulos/archivo/componentes/etiquetas/etiquetas.component.html
+++ b/src/app/modulos/archivo/componentes/etiquetas/etiquetas.component.html
@@ -1,3 +1,110 @@
-<p>
-  etiquetas works!
-</p>
+<div class="row">
+  <div class="col-sm-8">
+    <div class="ibox">
+      <div class="ibox-content">
+        <h2>Etiquetas</h2>
+        <div class="input-group">
+          <input type="text" placeholder="Consultar o agregar etiquetas " class="input form-control" [(ngModel)]="texto_etiqueta" name="texto_etiqueta"
+            id="texto_etiqueta" tabindex="1" autofocus>
+          <span class="input-group-btn">
+            <button type="button" class="btn btn btn-primary" [disabled]="texto_etiqueta==='' || (texto_etiqueta!=='' && cargando)" (click)="agregar_etiqueta()">
+              <i class="fa fa-plus"></i> Agregar</button>
+          </span>
+        </div>
+
+        <div class="clients-list">
+          <div class="sk-spinner sk-spinner-cube-grid" [ngClass]="{'hide': !cargando}">
+            <div class="sk-cube"></div>
+            <div class="sk-cube"></div>
+            <div class="sk-cube"></div>
+            <div class="sk-cube"></div>
+            <div class="sk-cube"></div>
+            <div class="sk-cube"></div>
+            <div class="sk-cube"></div>
+            <div class="sk-cube"></div>
+            <div class="sk-cube"></div>
+          </div>
+
+          <div class="col-lg-5" [ngClass]="{'hide': etiquetas.length<=0}">
+              <div class="ibox float-e-margins">
+                <div class="ibox-content">
+                  <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
+                    <thead>
+                      <tr>
+                        <th class="hide">Tabla</th>
+                        <th class="hide">Campo</th>
+                        <th>Codigo Etiqueta</th>
+                        <th class="hide">Tipo</th>
+                        <th>Identificador Archivo</th>
+                        <th>Vinculado</th>
+                        <th class="hide">Valor</th>
+                        <th>Observación</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr *ngFor="let t of etiquetas" style="cursor: pointer;">
+                        <td class="hide">{{t.tabla}}</td>
+                        <td class="hide">{{t.campo}}</td>
+                        <td>{{t.codigo}}</td>
+                        <td class="hide">{{t.tipo}}</td>
+                        <td>{{t.dato}}</td>
+                        <td>{{(t.cantidad>0)?'SI':'NO'}}</td>
+                        <td class="hide">{{t.valor}}</td>
+                        <td>{{t.observacion}}</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-4" [ngClass]="{'hide': etiqueta.codigo===''}">
+    <div class="ibox ">
+
+      <div class="ibox-content">
+        <div class="tab-content">
+          <div id="contact-1" class="tab-pane active">
+            <div class="row m-b-lg">
+              <div class="col-lg-12">
+                Etiqueta:
+                <strong>
+                  {{etiqueta.codigo}}
+                </strong>
+
+                <p>
+                  <select name="codigo_propiedad" id="codigo_propiedad" class="form-control" [(ngModel)]="codigo_propiedad">
+                    <option value="{{propiedad.codigo}}" *ngFor="let propiedad of propiedades">{{propiedad.dato}}</option>
+                  </select>
+                  <input type="text" name="texto_propiedad" id="texto_propiedad" class="form-control" [(ngModel)]="texto_propiedad">
+                </p>
+                <button type="button" class="btn btn-primary btn-sm btn-block" [disabled]="codigo_propiedad==='' || texto_propiedad===''" (click)="agregar_propiedad()">
+                  <i class="fa fa-plus"></i> Agregar Propiedad
+                </button>
+              </div>
+            </div>
+            <div class="client-detail">
+
+              <strong>Propiedades agregadas</strong>
+
+              <ul class="list-group clear-list" [ngClass]="{'hide': etiqueta_propiedades.length<=0}">
+                <li class="list-group-item" *ngFor="let e of etiqueta_propiedades; let i=index" [ngClass]="{'fist-item': i===0}">
+                  <span class="pull-right"> {{e.codigo}} </span>
+                  <a href="#" (click)="eliminar_propiedad(e.codigo)">
+                    {{e.dato}}
+                  </a>
+                </li>
+              </ul>
+
+            </div>
+          </div>
+
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
