--- a/src/app/modulos/generico/componentes/sedes/sedes.component.html
+++ b/src/app/modulos/generico/componentes/sedes/sedes.component.html
@@ -1,3 +1,121 @@
-<p>
-  sedes works!
-</p>
+<div class="row">
+    <!-- Formulario -->
+    <div class="col-lg-12">
+      <div class="ibox float-e-margins">
+        <div class="ibox-title">
+          <h5>Sedes, Departamentos, Secciones y otros</h5>
+          <div class="ibox-tools">
+            <a class="collapse-link">
+              <i class="fa fa-chevron-up"></i>
+            </a>
+            <a class="dropdown-toggle hide" data-toggle="dropdown" href="#">
+              <i class="fa fa-wrench"></i>
+            </a>
+            <ul class="dropdown-menu dropdown-user">
+              <li>
+                <a href="#">Config option 1</a>
+              </li>
+              <li>
+                <a href="#">Config option 2</a>
+              </li>
+            </ul>
+            <a class="close-link hide">
+              <i class="fa fa-times"></i>
+            </a>
+          </div>
+        </div>
+        <div class="ibox-content">
+          <div role="form" class="form-inline">
+            <div class="form-group">
+              <label for="tercero" class="sr-only">Tercero</label>
+              <select name="tercero" id="tercero" [(ngModel)]="tercero" class="form-control input-sm" title="Tercero"
+                placeholder="Tercero" [disabled]="editar">
+                <option [ngValue]="terceroVacio" selected="selected">Seleccione un tercero</option>
+                <option [ngValue]="t" *ngFor="let t of terceros">{{t.razon_social}}</option>
+              </select>
+            </div>
+            <div class="form-group">
+                <label for="sede_id" class="sr-only">Identificación</label>
+                <input type="text" placeholder="Identificación" id="sede_id" name="sede_id" title="Identificación" class="form-control input-sm"
+                  [(ngModel)]="sede.sede_id" [disabled]="editar">
+              </div>
+            <div class="form-group">
+              <label for="razon_social" class="sr-only">Razón Social</label>
+              <input type="text" placeholder="Razón Social" id="razon_social" name="razon_social" title="Razón Social" class="form-control input-sm"
+                [(ngModel)]="sede.razon_social">
+            </div>
+
+            <div class="checkbox m-r-xs">
+                <input type="checkbox" id="activa" name="activa" [(ngModel)]="sede.activa" title="Estado de la sede">
+                <label for="activa">
+                    Activa
+                </label>
+            </div>
+
+            <button class="btn btn-primary " type="button" (click)="guardar()">
+              <i class="fa fa-check"></i>&nbsp;Guardar
+            </button>
+            <button class="btn btn-warning " type="button" (click)="cancelar()" [ngClass]="{'hide': !editar}">
+              <i class="fa fa-times"></i>
+              <span class="bold">Cancelar</span>
+            </button>
+            <button class="btn btn-danger " type="button" (click)="borrar()" [ngClass]="{'hide': !editar}">
+              <i class="fa fa-trash"></i>&nbsp;&nbsp;
+              <span class="bold">Borrar</span>
+            </button>
+            <div class="sk-spinner sk-spinner-cube-grid" [ngClass]="{'hide': !cargando}">
+                <div class="sk-cube"></div>
+                <div class="sk-cube"></div>
+                <div class="sk-cube"></div>
+                <div class="sk-cube"></div>
+                <div class="sk-cube"></div>
+                <div class="sk-cube"></div>
+                <div class="sk-cube"></div>
+                <div class="sk-cube"></div>
+                <div class="sk-cube"></div>
+              </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Fin de Formulario -->
+    <!-- Tabla -->
+    <div class="col-lg-12">
+      <div class="ibox float-e-margins">
+
+        <div class="ibox-content" style="">
+          <div class="row">
+            <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
+              <thead>
+                <tr>
+                  <th class="hide">Tipo Identificación</th>
+                  <th class="hide">Identificación Tercero</th>
+                  <th>Tercero</th>
+                  <th>Identificación</th>
+                  <th>Razón Social</th>
+                  <th>Activa</th>
+                  <th>Fecha de Registro</th>
+                  <th class="hide">Logo</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let s of sedes" style="cursor: pointer;">
+                  <td class="hide">{{s.tipo_id}}</td>
+                  <td class="hide">{{s.identificacion}}</td>
+                  <td>{{s.tercero}}</td>
+                  <td>{{s.sede_id}}</td>
+                  <td>{{s.razon_social}}</td>
+                  <td>{{(s.activa===1)?'SI':'NO'}}</td>
+                  <td>{{s.fecha_registro.date|date:'yyyy-MM-dd'}}</td>
+                  <td  class="hide">{{s.logo}}</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Fin de tabla -->
+
+
+  </div>
