--- a/src/app/modulos/generico/componentes/terceros/terceros.component.html
+++ b/src/app/modulos/generico/componentes/terceros/terceros.component.html
@@ -3,7 +3,7 @@
   <div class="col-lg-12">
     <div class="ibox float-e-margins">
       <div class="ibox-title">
-        <h5>Personas, Empresas, Departamentos y otros</h5>
+        <h5>Personas, Empresas y otros</h5>
         <div class="ibox-tools">
           <a class="collapse-link">
             <i class="fa fa-chevron-up"></i>
@@ -28,14 +28,14 @@
         <div role="form" class="form-inline">
           <div class="form-group">
             <label for="tipo_id" class="sr-only">Tipo Identificación</label>
-            <select name="tipo_id" id="tipo_id" [(ngModel)]="tercero.tipo_id" class="form-control input-md" title="Tipo Identificación"
+            <select name="tipo_id" id="tipo_id" [(ngModel)]="tercero.tipo_id" class="form-control input-sm" title="Tipo Identificación"
               placeholder="Tipo Identificación" [disabled]="editar">
               <option value="{{t.tipo_id}}" *ngFor="let t of tipoDocumentos">{{t.denominacion}}</option>
             </select>
           </div>
           <div class="form-group">
             <label for="identificacion" class="sr-only">Identificación</label>
-            <input type="text" placeholder="Identificación" id="identificacion" name="identificacion" title="Identificación" class="form-control input-md"
+            <input type="text" placeholder="Identificación" id="identificacion" name="identificacion" title="Identificación" class="form-control input-sm"
               [(ngModel)]="tercero.identificacion" [disabled]="editar">
           </div>
           <div class="form-group">
