Por terminar CRUD de Grupos y Usuarios

--- a/src/app/modulos/principal/componentes/escritorio/escritorio.component.html
+++ b/src/app/modulos/principal/componentes/escritorio/escritorio.component.html
@@ -72,8 +72,11 @@
             <li routerLinkActive="active">
               <a routerLink="sedes">Sedes</a>
             </li>
-            <li>
-              <a href="graph_rickshaw.html">Usuarios</a>
+            <li routerLinkActive="active">
+                <a routerLink="grupos">Grupos</a>
+              </li>
+            <li routerLinkActive="active">
+              <a routerLink="usuarios">Usuarios</a>
             </li>
             <li routerLinkActive="active">
               <a routerLink="tablas">Tablas Genéricas</a>
